<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shake The World</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_vibor">VIborActivity</string>
    <string name="title_activity_single">SingleActivity</string>
    <string name="title_activity_multi">MultiActivity</string>
    <string name="StrPlay">Трясти</string>
    <string name="StrStatistic">Статистика</string>
    <string name="StrTop">Топ</string>
    <string name="StrDuel">Потрясти с другом</string>
    <string name="StrSettings">Настройки</string>
    <string name="StrShakeIT">Shake the World!</string>
    <string name="StrVibor">Выберите режим игры</string>
    <string name="StrSinglePlayer">Один</string>
    <string name="StrMultiPlayer">Дуэль</string>
    <string name="Mode1">Выносливость</string>
    <string name="Mode2">Время</string>
    <string name="Mode3">Скорость</string>
    <string name="choseemode">Выберите режим</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="launch">НАЧИНАЙТЕ!</string>
    <string name="choosing_first_mode">Выберите игру</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="end_title">Поздравляем!\nВы потрясли мир с \n результатом\n </string>
    <string name="finish">Ваш результат</string>
    <string name="share">Делиться \n результатом</string>
    <string name="stop_button">Стоп</string>
    <string name="title_activity_game_activity2">GameActivity2</string>
    <string name="title_activity_game_activity3">GameActivity3</string>
    <string name="exit">Главное меню!</string>
    <string name="connection_try">Устанавливаем соединение</string>
    <string name="connection_lose">Соединение провалено</string>
    <string name="connection_ok">Соединение установленнно успешно</string>
    <string name="show_stat">Статистика</string>
    <string name="played_games">Сыгранно игр</string>
    <string name="sdelanno">Сделанно Shake-ов</string>
    <string name="priloghenno_sil">Приложенно cил</string>
    <string name="shakeov">Shake-ов</string>
    <string name="metrov">м</string>
    <string name="nutonov">Ньютонов</string>
    <string name="seconds">секунд</string>
    <string name="potracheno_vremeni">Потраченно времени</string>
    <string name="proidenno">Пройденно</string>
    <string name="the_best_force_shake">Самый сильный Shake</string>
    <string name="the_whole_way">Пройденный путь</string>
    <string name="the_longest">Самый длинный Shake</string>
    <string name="stamina_my">Затраченные усилия</string>
    <string name="the_most_my_way">Самое большое усилие</string>
    <string name="the_most_great_shake">Самый быстрый Shake</string>
    <string name="all_shakes">Всего Shake-ов</string>
    <string name="time">Время</string>
    <string name="kalories">Количество каллорий</string>
    <string name="dialog_question">Хотите выйти или сыграть снова?</string>
    <string name="dialog_exit">Выйти</string>
    <string name="dialog_playAgain">Играть снова</string>
    <string name="exit_mes">Вы действительно хотите выйти?</string>
    <string name="first_button">Играть</string>
    <string name="second_button">SETTINGS</string>
    <string name="title_activity_start_screen">Меню</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_mode">ChooseMode</string>
    <string name="title_activity_game_modes">GameModes</string>
    <string name="title_activity_multi_player">MultiPlayer</string>
    <string name="one_more">Еще раз!</string>

</resources>
