<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.shakeit.SingleActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/choosing_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choseemode"
        android:textColor="@color/black_color"
        android:textSize="35sp"
        android:layout_marginBottom="77dp"
        android:layout_above="@+id/mode3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/mode3"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/mode2"
        android:layout_alignRight="@+id/mode2"
        android:layout_centerVertical="true"
        android:background="@drawable/s"
        android:gravity="center"
        android:text="@string/Mode1"
        android:textSize="25dp" />

    <Button
        android:id="@+id/mode2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/mode3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/s"
        android:gravity="center"
        android:text="@string/Mode2"
        android:textSize="25dp" />

    <Button
        android:id="@+id/mode1"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/mode3"
        android:layout_alignRight="@+id/mode2"
        android:layout_below="@+id/mode2"
        android:layout_marginTop="30dp"
        android:background="@drawable/s"
        android:gravity="center"
        android:text="@string/Mode3"
        android:textSize="25dp" />

</RelativeLayout>

